# downkedin

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: build_test.yml  buildtest.yml  format.yml
docs/: conf.py  downkedin.rst  index.rst
downkedin/: downloader.py  fetcher.py  login.py  models.py  parser.py
examples/: download_course_path.py
tests/: test_downkedin.py
