[tool.poetry]
name = "downkedin"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
requests = "^2.26.0"
aiofiles = "^0.7.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
