[tool.poetry]
name = "downkedin"
version = "0.1.1"
description = "Linkedin Learning Downloader"
license = "MIT"
authors = ["tiagovla <tiagovla@gmail.com>"]

packages = [
    {include = "downkedin", from="."}
]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
requests = "^2.26.0"
aiofiles = "^0.7.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.12.0"
black = "^21.9b0"
coverage = "^6.0"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
